api1/sre/api1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api1-service
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: api1
